--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@
   height: 350px;
   margin: 10px;
   padding: 5px;
-  background-color: #f7eeee;
+  background-color: #dbd1d1;
 }
 
 .res-card:hover {
@@ -44,4 +44,9 @@
 .res-container {
   display: flex;
   flex-wrap: wrap;
+}
+
+.filter-btn{
+  margin: 10px;
+  cursor: pointer;
 }
