--- a/index.css
+++ b/index.css
@@ -1,4 +1,12 @@
-body {
+/* Your CSS file */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+/* Your other styles */
+
+
+/* body {
   background-color: white;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
@@ -7,12 +15,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* border: 1px solid black; */
 }
 
 .logo-container {
   display: flex;
-  /* background: rgb(245,131,58); */
 }
 
 .app-name {
@@ -56,7 +62,6 @@ body {
 }
 
 .res-card:hover {
-  /* border: 1px solid black; */
   -webkit-box-shadow: 2px -1px 11px 5px rgba(194, 194, 194, 1);
   -moz-box-shadow: 2px -1px 11px 5px rgba(194, 194, 194, 1);
   box-shadow: 2px -1px 11px 5px rgba(194, 194, 194, 1);
@@ -105,7 +110,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* background-color: red; */
 }
 
 .filter-btn {
@@ -117,16 +121,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* background-color: red; */
 }
-
-/* .shimmer-card {
-  background-color: #d6d9d8;
-  width: 280px;
-  height: 350px;
-  margin: 20px 25px 20px 25px;
-  border-radius: 10px;
-} */
 
 .shimmer-card {
   width: 280px;
@@ -153,8 +148,6 @@ body {
   border: 1px solid black;
 }
 
-/* About.js */
-
 .avatar {
   border-radius: 500px;
   border: 2px solid black;
@@ -172,4 +165,4 @@ body {
 
 .status-offline {
   color: red;
-}
+}  */
